// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RangeSlider with \`x\` axis should handle clicks on the track 1`] = `
<span
  aria-label="slider handle"
  aria-orientation="horizontal"
  aria-valuemax="100"
  aria-valuemin="0"
  aria-valuenow="15"
  class="test__thumb"
  role="slider"
  style="background-color: rgb(255, 255, 255); border: 2px solid #000; border-radius: 4px; box-sizing: border-box; display: block; position: absolute; transition: height 0.4s, width 0.4s; height: 26px; left: -5px; top: -3px; width: 10px;"
  tabindex="0"
/>
`;

exports[`RangeSlider with \`x\` axis should handle mouse events 1`] = `
<span
  aria-label="slider handle"
  aria-orientation="horizontal"
  aria-valuemax="100"
  aria-valuemin="0"
  aria-valuenow="65"
  class="test__thumb"
  role="slider"
  style="background-color: rgb(255, 255, 255); border: 2px solid #000; border-radius: 4px; box-sizing: border-box; display: block; position: absolute; transition: height 0.4s, width 0.4s; height: 26px; left: -5px; top: -3px; width: 10px;"
  tabindex="0"
/>
`;

exports[`RangeSlider with \`x\` axis should handle touch events 1`] = `
<span
  aria-label="slider handle"
  aria-orientation="horizontal"
  aria-valuemax="100"
  aria-valuemin="0"
  aria-valuenow="25"
  class="test__thumb"
  role="slider"
  style="background-color: rgb(255, 255, 255); border: 2px solid #000; border-radius: 4px; box-sizing: border-box; display: block; position: absolute; transition: height 0.4s, width 0.4s; height: 26px; left: -5px; top: -3px; width: 10px;"
  tabindex="0"
/>
`;

exports[`RangeSlider with \`x\` axis should render properly 1`] = `
<div
  class="test"
  style="box-sizing: border-box; display: inline-block; padding: 6px; transition: height 0.4s, width 0.4s; height: 32px; width: 100%;"
>
  <div
    class="test__track"
    role="presentation"
    style="background-color: rgb(204, 204, 204); border-radius: 3px; box-sizing: border-box; height: 20px; position: relative; width: 100%;"
  >
    <div
      class="test__range"
      style="width: 0%; background-color: rgb(0, 123, 255); border-radius: 3px; position: absolute; height: 100%; top: 0px;"
    />
    <div
      role="presentation"
      style="box-sizing: border-box; height: 20px; position: absolute; transition: height 0.4s, width 0.4s; width: 20px; left: 0%; bottom: 0%;"
    >
      <span
        aria-label="slider handle"
        aria-orientation="horizontal"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="0"
        class="test__thumb"
        role="slider"
        style="background-color: rgb(255, 255, 255); border: 2px solid #000; border-radius: 4px; box-sizing: border-box; display: block; position: absolute; transition: height 0.4s, width 0.4s; height: 26px; left: -5px; top: -3px; width: 10px;"
        tabindex="0"
      />
    </div>
  </div>
</div>
`;

exports[`RangeSlider with \`xy\` axis should render properly 1`] = `
<div
  class="test"
  style="box-sizing: border-box; display: inline-block; padding: 6px; transition: height 0.4s, width 0.4s; height: 100%; width: 100%;"
>
  <div
    class="test__track"
    role="presentation"
    style="background-color: rgb(204, 204, 204); border-radius: 3px; box-sizing: border-box; height: 100%; position: relative; width: 100%; min-height: 50px;"
  >
    <div
      class="test__range"
      style="height: 0%; width: 0%; background-color: rgb(0, 123, 255); border-radius: 3px; position: absolute; bottom: 0px;"
    />
    <div
      role="presentation"
      style="box-sizing: border-box; height: 20px; position: absolute; transition: height 0.4s, width 0.4s; width: 20px; left: 0%; bottom: 0%;"
    >
      <span
        aria-label="slider handle"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="0"
        class="test__thumb"
        role="slider"
        style="background-color: transparent; border: 2px solid #000; border-radius: 50%; box-sizing: border-box; display: block; position: absolute; transition: height 0.4s, width 0.4s; bottom: -10px; height: 20px; left: -10px; width: 20px;"
        tabindex="0"
      />
    </div>
  </div>
</div>
`;

exports[`RangeSlider with \`y\` axis should render properly 1`] = `
<div
  class="test"
  style="box-sizing: border-box; display: inline-block; padding: 6px; transition: height 0.4s, width 0.4s; height: 100%; width: 32px;"
>
  <div
    class="test__track"
    role="presentation"
    style="background-color: rgb(204, 204, 204); border-radius: 3px; box-sizing: border-box; height: 100%; position: relative; width: 20px; min-height: 50px;"
  >
    <div
      class="test__range"
      style="height: 0%; background-color: rgb(0, 123, 255); border-radius: 3px; position: absolute; bottom: 0px; left: 0px; width: 100%;"
    />
    <div
      role="presentation"
      style="box-sizing: border-box; height: 20px; position: absolute; transition: height 0.4s, width 0.4s; width: 20px; left: 0%; bottom: 0%;"
    >
      <span
        aria-label="slider handle"
        aria-orientation="vertical"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="0"
        class="test__thumb"
        role="slider"
        style="background-color: rgb(255, 255, 255); border: 2px solid #000; border-radius: 4px; box-sizing: border-box; display: block; position: absolute; transition: height 0.4s, width 0.4s; bottom: -5px; height: 10px; left: -3px; width: 26px;"
        tabindex="0"
      />
    </div>
  </div>
</div>
`;
